force-app/main/default/objects/User/fields/AnnuallyInvoicedDays__c.field-meta.xml
<CustomField>
    <fullName>AnnuallyInvoicedDays__c</fullName>
    <defaultValue>218</defaultValue>
    <description>Contains the number of days that can be invoiced during a year.</description>
    <label>Annually Invoiced Days</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>