force-app/main/default/objects/User/fields/EntryDate__c.field-meta.xml
<CustomField>
    <fullName>EntryDate__c</fullName>
    <description>Employee entry date.</description>
    <label>Entry Date</label>
    <type>Date</type>
</CustomField>