force-app/main/default/objects/User/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Matches the level of the employees with the custom metadata table &quot;Level Price&quot; to add the average cost price on the project assignements.</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Junior Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant confirmé</fullName>
            </value>
            <value>
                <fullName>Senior Consultant</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
            <value>
                <fullName>Senior Expert</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Senior Project Manager</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Senior Partner</fullName>
            </value>
            <value>
                <fullName>Subcontrator</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>