force-app/main/default/objects/User/fields/TimesheetUser__c.field-meta.xml
<CustomField>
    <fullName>TimesheetUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the indicated user should be a user of the timesheet module.</description>
    <label>Timesheet User</label>
    <type>Checkbox</type>
</CustomField>